editors/tree-sitter-slint/grammar.js
    component: ($) =>
      seq(
        optional(seq(field("id", $._statement_identifier), ":=")),
        field("type", $._statement_type_identifier),
        $.block,
      ),

    component_definition: ($) =>
      seq(
        choice(
          seq(
            // new syntax
            "component",
            field("name", $.user_type_identifier),
          ),
          seq(
            // old syntax
            field("name", $.user_type_identifier),
            ":=",
            field("base_type", $.user_type_identifier),
          ),
        ),
        repeat($.component_modifier),
        $.block,
      ),

    _property_type: ($) => seq("<", field("type", $.type), ">"),

    _binding: ($) =>
      field(
        "binding",
        choice(seq($.imperative_block, optional(";")), seq($.expression, ";")),
      ),

    _member_attributes: ($) =>
      repeat1(choice($.property_deprecation, $.shadowable)),

    property: ($) =>
      seq(
        field("attributes", optional($._member_attributes)),
        field("visibility", optional($.property_visibility)),
        "property",
        seq(
          $._property_type,
          field("name", $.simple_identifier),
          choice(
            seq(field("binding_op", ":"), $._binding),
            seq(field("binding_op", "<=>"), $.expression, ";"),
            ";",
          ),
        ),
      ),

    block: ($) => seq("{", repeat($._block_statement), "}"),

    _block_statement: ($) =>
      choice(
        $.animate_statement,
        $.binding_alias,
        $.callback,
        $.callback_alias,
        $.callback_event,
        $.changed_event,
        $.children_identifier, // No `;` after this one!
        $.component,
        $.for_loop,
        $.function_definition,
        $.if_statement,
        $.implement_statement,
        $.match_element,
        $.property,
        $.property_assignment,
        $.slot_declaration,
        $.slot_assignment,
        $.slot_forwarding,
        $.states_definition,
        $.transitions_definition,
      ),

    _statement_identifier: ($) =>
      choice($.simple_identifier, alias("slot", $.simple_identifier)),

    _statement_type_identifier: ($) =>
      choice($.user_type_identifier, alias("slot", $.user_type_identifier)),

    if_statement: ($) =>
      seq("if", field("condition", $.expression), ":", $.component),

    for_loop: ($) =>
      seq(
        "for",
        field("identifier", $.simple_indexed_identifier),
        "in",
        field("range", $.for_range),
        ":",
        $.component,
      ),

    for_range: ($) => choice($.value_list, $.expression),

    unary_expression: ($) =>
      prec.left(
        14,
        seq(field("op", $.unary_prec_operator), field("expr", $.expression)),
      ),

    ternary_expression: ($) =>
      prec.left(
        3,
        seq(
          field("condition", $.expression),
          "?",
          field("left", $.expression),
          ":",
          field("right", $.expression),
        ),
      ),

    callback: ($) =>
      seq(
        field("attributes", optional($._member_attributes)),
        optional($.purity),
        "callback",
        field("name", $.simple_identifier),
        optional($._callback_signature),
        optional(seq("->", field("return_type", $.type))),
        ";",
      ),

    callback_event: ($) =>
      seq(
        field("name", choice($._statement_identifier, alias("changed", $.simple_identifier))),
        optional(field("arguments", $.arguments)),
        "=>",
        field("action", $._binding),
      ),

    function_call: ($) =>
      prec(
        17,
        seq(
          field("name", $.simple_identifier),
          field("arguments", $.arguments),
        ),
      ),

    _callback_signature: ($) =>
      prec.left(
        seq(
          "(",
          field("arguments", optional(seq(commaSep1(choice($.typed_identifier, $.type)), optional(",")))),
          ")",
        ),
      ),

    unary_prec_operator: (_) => choice("!", "-", "+"),

    add_prec_operator: (_) => choice("+", "-"),
    mult_prec_operator: (_) => choice("*", "/"),
    comparison_operator: (_) => choice(">", "<", ">=", "<=", "==", "!="),
    assignment_prec_operator: (_) =>
      prec.left(1, choice("=", ":", "+=", "-=", "*=", "/=")),

    // This is inspired from tree-sitter-javascript
    // https://github.com/tree-sitter/tree-sitter-javascript/blob/fdeb68ac8d2bd5a78b943528bb68ceda3aade2eb/grammar.js#L866
    /////////////////////////////////////////////////////////////////////
    _string: ($) =>
      choice(
        seq(
          '"',
          repeat(choice($._unescaped_string_fragment, $.escape_sequence)),
          '"',
        ),
      ),

    value: ($) =>
      prec(10, choice($.anon_struct_block, $.value_list, $._basic_value)),

    reference_identifier: (_) => choice("parent", "root", "self"),

    _number: ($) => choice($._int_number, $._float_number),

    _int_number: (_) => /\d+/,
    _float_number: (_) => /(\d*\.\d+|\d+\.\d*)/,

    int_value: ($) => $._int_number,
    float_value: ($) => $._float_number,
    bool_value: (_) => choice("true", "false"),
    string_value: ($) => $._string,
    color_value: (_) => /#[\da-fA-F]+/,
    // brush_value: ($) => ???,
    physical_length_value: ($) => seq($._number, token.immediate("phx")),
    length_value: ($) =>
      seq($._number, token.immediate(choice("px", "cm", "mm", "in", "pt"))),
    duration_value: ($) => seq($._number, token.immediate(choice("ms", "s"))),
    _basic_value: ($) =>
      choice(
        $.int_value,
        $.float_value,
        $.bool_value,
        $.string_value,
        $.color_value,
        $.physical_length_value,
        $.length_value,
        $.duration_value,
        $.angle_value,
        $.percent_value,
        $.relative_font_size_value,
        $.easing_kind_identifier,
      ),

    // Single-line comment
