editors/tree-sitter-slint/corpus/bindings.txt
================================================================================
animated_default_geometry
================================================================================

TestCase := Rectangle {

    width: 100px;
    height: 200px;

    r := Rectangle {
        // default geometry for width & height
        animate height { duration: 1s; }
        animate width { duration: 1s; }
    }

    property<bool> test: r.width == 100px && r.height == 200px;
}

--------------------------------------------------------------------------------

(source_file
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (assignment
          (var_identifier)
          (assignment_prec_operator)
          (value
            (length_value))))
      (block_statement
        (assignment
          (var_identifier)
          (assignment_prec_operator)
          (value
            (length_value))))
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block
            (comment)
            (block_statement
              (component
                (type_identifier)
                (ERROR)
                (block
                  (block_statement
                    (assignment
                      (var_identifier)
                      (assignment_prec_operator)
                      (value
                        (duration_value)))))))
            (block_statement
              (component
                (type_identifier)
                (ERROR)
                (block
                  (block_statement
                    (assignment
                      (var_identifier)
                      (assignment_prec_operator)
                      (value
                        (duration_value))))))))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (comparison_binary_expression
            (comparison_binary_expression
              (var_identifier
                (post_identifier))
              (comparison_operator)
              (mult_binary_expression
                (value
                  (length_value))
                (mult_prec_operator)
                (var_identifier
                  (post_identifier))))
            (comparison_operator)
            (value
              (length_value))))))))

================================================================================
change_sub_property
================================================================================

SubElem := Rectangle {
    property <int> value: sub.value;
    callback change();
    change => { sub.value += 44; }
    sub := Rectangle {
        property <int> value: 55;
    }
}

TestCase := Rectangle {
    callback change();
    change => { sub.change() }
    property <int> toplevel: sub.value + 1;
    sub := SubElem { }
}


--------------------------------------------------------------------------------

(source_file
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (var_identifier
            (post_identifier))))
      (block_statement
        (callback
          (function_identifier)
          (call_signature)))
      (block_statement
        (callback_event
          (function_identifier)
          (block
            (block_statement
              (assignment
                (var_identifier
                  (post_identifier))
                (assignment_prec_operator)
                (value
                  (int_value)))))))
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block
            (block_statement
              (property
                (type_identifier)
                (var_identifier)
                (value
                  (int_value)))))))))
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (callback
          (function_identifier)
          (call_signature)))
      (block_statement
        (callback_event
          (function_identifier)
          (block
            (var_identifier
              (post_identifier
                (function_call
                  (function_identifier)
                  (call_signature)))))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (add_binary_expression
            (var_identifier
              (post_identifier))
            (add_prec_operator)
            (value
              (int_value)))))
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block))))))

================================================================================
change_sub_property2
================================================================================

SubElem := Rectangle {
    property <int> value: 55;
    callback change();
    change => { value += 44; }
}

TestCase := Rectangle {
    callback change();
    change => { sub.change(); sub2.change(); }
    property <int> toplevel: sub.value + sub2.value;
    sub := SubElem { }
    sub2 := SubElem { value : 1; }
}


--------------------------------------------------------------------------------

(source_file
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (value
            (int_value))))
      (block_statement
        (callback
          (function_identifier)
          (call_signature)))
      (block_statement
        (callback_event
          (function_identifier)
          (block
            (block_statement
              (assignment
                (var_identifier)
                (assignment_prec_operator)
                (value
                  (int_value)))))))))
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (callback
          (function_identifier)
          (call_signature)))
      (block_statement
        (callback_event
          (function_identifier)
          (block
            (block_statement
              (var_identifier
                (post_identifier
                  (function_call
                    (function_identifier)
                    (call_signature)))))
            (block_statement
              (var_identifier
                (post_identifier
                  (function_call
                    (function_identifier)
                    (call_signature))))))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (add_binary_expression
            (var_identifier
              (post_identifier))
            (add_prec_operator)
            (var_identifier
              (post_identifier)))))
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block)))
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block
            (block_statement
              (assignment
                (var_identifier)
                (assignment_prec_operator)
                (value
                  (int_value))))))))))

================================================================================
issue_1026_opacity_alias
================================================================================

RoundedIcon := Rectangle {
    property <float> background-opacity <=> background-fill.opacity;
    background-fill := Rectangle {
        background:  #ff7d34;
        opacity: 1.0;
    }
    property <float> o: background-fill.opacity;
}

Device := VerticalLayout {
    spacing: 5px;
    ri := RoundedIcon {
        background-opacity: 0.15;
    }

    property<float> o: ri.o;
}

Sub := Rectangle {
    property o <=> d.o;
    d := Device {}
}


TestCase := Rectangle {
    s := Sub {}
    d := Device {}
    property o1 <=> s.o;
    property o2 <=> d.o;
    property <bool> test: abs(o1 - 0.15) < 0.001 && abs(o2 - 0.15) < 0.001;
}

--------------------------------------------------------------------------------

(source_file
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (property_alias
          (type_identifier)
          (var_identifier)
          (var_identifier
            (post_identifier))))
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block
            (block_statement
              (assignment
                (var_identifier)
                (assignment_prec_operator)
                (value
                  (color_value))))
            (block_statement
              (assignment
                (var_identifier)
                (assignment_prec_operator)
                (value
                  (float_value)))))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (var_identifier
            (post_identifier))))))
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (assignment
          (var_identifier)
          (assignment_prec_operator)
          (value
            (length_value))))
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block
            (block_statement
              (assignment
                (var_identifier)
                (assignment_prec_operator)
                (value
                  (float_value)))))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (var_identifier
            (post_identifier))))))
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (property_alias
          (var_identifier)
          (var_identifier
            (post_identifier))))
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block)))))
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block)))
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block)))
      (block_statement
        (property_alias
          (var_identifier)
          (var_identifier
            (post_identifier))))
      (block_statement
        (property_alias
          (var_identifier)
          (var_identifier
            (post_identifier))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (comparison_binary_expression
            (comparison_binary_expression
              (function_call
                (function_identifier)
                (call_signature
                  (add_binary_expression
                    (type_identifier)
                    (add_prec_operator)
                    (value
                      (float_value)))))
              (comparison_operator)
              (mult_binary_expression
                (value
                  (float_value))
                (mult_prec_operator)
                (function_call
                  (function_identifier)
                  (call_signature
                    (add_binary_expression
                      (type_identifier)
                      (add_prec_operator)
                      (value
                        (float_value)))))))
            (comparison_operator)
            (value
              (float_value))))))))

================================================================================
issue_385_default_geom
================================================================================

TestCase := Rectangle {
    width: 100px;
    height: 200px;

    r := Rectangle {
        width <=> root.width;
        height <=> root.height;
    }

    property<bool> test: r.width == 100px && r.height == 200px;
}

--------------------------------------------------------------------------------

(source_file
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (assignment
          (var_identifier)
          (assignment_prec_operator)
          (value
            (length_value))))
      (block_statement
        (assignment
          (var_identifier)
          (assignment_prec_operator)
          (value
            (length_value))))
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block
            (block_statement
              (property_alias
                (var_identifier)
                (var_identifier
                  (reference_identifier)
                  (post_identifier))))
            (block_statement
              (property_alias
                (var_identifier)
                (var_identifier
                  (reference_identifier)
                  (post_identifier)))))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (comparison_binary_expression
            (comparison_binary_expression
              (var_identifier
                (post_identifier))
              (comparison_operator)
              (mult_binary_expression
                (value
                  (length_value))
                (mult_prec_operator)
                (var_identifier
                  (post_identifier))))
            (comparison_operator)
            (value
              (length_value))))))))

================================================================================
override
================================================================================

Compo := Text {
    property <int> prop_a: 10;
    property <int> prop_b;
    prop_b: 20;
    text: "hello";
}

TestCase := Rectangle {
    property <string> text: "ignore_me";
    c := Compo {
        prop_a: 1;
        prop_b: 2;
        text: "world";
    }

    property<int> prop_a: c.prop_a;
    property<int> prop_b: c.prop_b;
    property<string> prop_text: c.text;

    property<bool> test: prop_a == 1 && prop_b == 2 && prop_text == "world";
}

--------------------------------------------------------------------------------

(source_file
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (value
            (int_value))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)))
      (block_statement
        (assignment
          (var_identifier)
          (assignment_prec_operator)
          (value
            (int_value))))
      (block_statement
        (assignment
          (var_identifier)
          (assignment_prec_operator)
          (value
            (string_value
              (_string_fragment)))))))
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (value
            (string_value
              (_string_fragment)))))
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block
            (block_statement
              (assignment
                (var_identifier)
                (assignment_prec_operator)
                (value
                  (int_value))))
            (block_statement
              (assignment
                (var_identifier)
                (assignment_prec_operator)
                (value
                  (int_value))))
            (block_statement
              (assignment
                (var_identifier)
                (assignment_prec_operator)
                (value
                  (string_value
                    (_string_fragment))))))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (var_identifier
            (post_identifier))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (var_identifier
            (post_identifier))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (var_identifier
            (post_identifier))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (comparison_binary_expression
            (comparison_binary_expression
              (comparison_binary_expression
                (type_identifier)
                (comparison_operator)
                (mult_binary_expression
                  (value
                    (int_value))
                  (mult_prec_operator)
                  (type_identifier)))
              (comparison_operator)
              (mult_binary_expression
                (value
                  (int_value))
                (mult_prec_operator)
                (type_identifier)))
            (comparison_operator)
            (value
              (string_value
                (_string_fragment)))))))))

================================================================================
two_way_bug
================================================================================

// There used to be a bug in the deduplicate_property_read pass that would mess up aliases

BoxWithButtons := Window {
    property <string> value <=> val.text;
    val := Text {}
}

export TestCase := BoxWithButtons {
    property <int> temperature: 24;
    value: {
        (temperature < 0 ? "" : "+") + temperature;
    }

    property <bool> test: value == "+24";
}
--------------------------------------------------------------------------------

(source_file
  (comment)
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (property_alias
          (type_identifier)
          (var_identifier)
          (var_identifier
            (post_identifier))))
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block)))))
  (component_definition
    (export_modifier)
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (value
            (int_value))))
      (block_statement
        (assignment
          (var_identifier)
          (assignment_prec_operator)
          (ERROR)
          (add_binary_expression
            (comparison_binary_expression
              (type_identifier)
              (comparison_operator)
              (ternary_expression
                (value
                  (int_value))
                (value
                  (string_value))
                (value
                  (string_value
                    (_string_fragment)))))
            (add_prec_operator)
            (type_identifier))))))
  (ERROR
    (type_identifier)
    (UNEXPECTED 'e')
    (UNEXPECTED ':')
    (UNEXPECTED 'v')))

================================================================================
two_way_model
================================================================================

// Regression test for a bug in which an alias to a model property was not
// properly set because it was thought as constant

MenuItem := Rectangle {
    property <length> h <=> root.val;
    height: val;
    property <length> val;
}

export TestCase := Rectangle {
    VerticalLayout {
        for entry[idx] in [
            { val: 12px },
        ] : MenuItem {
            h: entry.val;
        }
        Rectangle {}
    }
    property <bool> test: root.preferred_height == 12px;
}

--------------------------------------------------------------------------------

(source_file
  (comment)
  (comment)
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (property_alias
          (type_identifier)
          (var_identifier)
          (var_identifier
            (reference_identifier)
            (post_identifier))))
      (block_statement
        (assignment
          (var_identifier)
          (assignment_prec_operator)
          (type_identifier)))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)))))
  (component_definition
    (export_modifier)
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (component
          (type_identifier)
          (block
            (block_statement
              (for_loop
                (var_identifier
                  (index_operator
                    (type_identifier)))
                (for_range
                  (anon_struct
                    (var_identifier)
                    (value
                      (length_value)))
                  (ERROR))
                (component
                  (type_identifier)
                  (block
                    (block_statement
                      (assignment
                        (var_identifier)
                        (assignment_prec_operator)
                        (var_identifier
                          (post_identifier))))))))
            (block_statement
              (component
                (type_identifier)
                (block))))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (comparison_binary_expression
            (var_identifier
              (reference_identifier)
              (post_identifier))
            (comparison_operator)
            (value
              (length_value))))))))

================================================================================
two_way_simple
================================================================================

TestCase := Rectangle {
    property<brush> extra_background <=> background;
    property<length> sub_width1 <=> sub.width;
    property<length> sub_width2: sub.width;

    property<int> sub_foo1: 44;
    property<int> sub_foo2: sub.foo;


    sub := Rectangle {
        width: 80phx;
        property<int> foo <=> root.sub_foo1;
    }

    if (true) : Rectangle { background: root.extra_background; }
}


--------------------------------------------------------------------------------

(source_file
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (property_alias
          (type_identifier)
          (var_identifier)
          (var_identifier)))
      (block_statement
        (property_alias
          (type_identifier)
          (var_identifier)
          (var_identifier
            (post_identifier))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (var_identifier
            (post_identifier))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (value
            (int_value))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (var_identifier
            (post_identifier))))
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block
            (block_statement
              (assignment
                (var_identifier)
                (assignment_prec_operator)
                (value
                  (physical_length_value))))
            (block_statement
              (property_alias
                (type_identifier)
                (var_identifier)
                (var_identifier
                  (reference_identifier)
                  (post_identifier)))))))
      (block_statement
        (if_statement
          (expression_body_paren
            (value
              (bool_value)))
          (component
            (type_identifier)
            (block
              (block_statement
                (assignment
                  (var_identifier)
                  (assignment_prec_operator)
                  (var_identifier
                    (reference_identifier)
                    (post_identifier)))))))))))

================================================================================
change_sub_property_indirection
================================================================================

// hello, hello2 and alias are aliases
SubElem := Rectangle {
    property <string> hello <=> hello2;
    property <string> hello2;
    t := Text {
        text <=> hello;
    }
    property <string> alias <=> t.text;

    property <string> binding: hello2;
}

TestCase := Rectangle {
    property <string> public_alias: "ABC";

    sub_alias := SubElem {
        hello <=> public_alias;
        property <string> indirection: binding;
    }

    property <string> sub_text <=> sub_alias.indirection;
    property <bool> test: sub_text == "ABC";
}


--------------------------------------------------------------------------------

(source_file
  (comment)
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (property_alias
          (type_identifier)
          (var_identifier)
          (var_identifier)))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)))
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block
            (block_statement
              (property_alias
                (var_identifier)
                (var_identifier))))))
      (block_statement
        (property_alias
          (type_identifier)
          (var_identifier)
          (var_identifier
            (post_identifier))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (type_identifier)))))
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (value
            (string_value
              (_string_fragment)))))
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block
            (block_statement
              (property_alias
                (var_identifier)
                (var_identifier)))
            (block_statement
              (property
                (type_identifier)
                (var_identifier)
                (type_identifier))))))
      (block_statement
        (property_alias
          (type_identifier)
          (var_identifier)
          (var_identifier
            (post_identifier))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (comparison_binary_expression
            (type_identifier)
            (comparison_operator)
            (value
              (string_value
                (_string_fragment)))))))))

================================================================================
issue_345_opacity_animation
================================================================================

Sub := Rectangle {
    property <bool> cond;
    property <float> child_opacity: inner.opacity;
    inner := Rectangle {
        opacity: cond ? 0 : 1;
        animate opacity { duration: 1s; }
        background: green;
    }
}

TestCase := Rectangle {
    property cond <=> s.cond;
    property val <=> s.child_opacity;
    s := Sub {}
}

--------------------------------------------------------------------------------

(source_file
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (property
          (type_identifier)
          (var_identifier)))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (var_identifier
            (post_identifier))))
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block
            (block_statement
              (assignment
                (var_identifier)
                (assignment_prec_operator)
                (ternary_expression
                  (type_identifier)
                  (value
                    (int_value))
                  (value
                    (int_value)))))
            (block_statement
              (component
                (type_identifier)
                (ERROR)
                (block
                  (block_statement
                    (assignment
                      (var_identifier)
                      (assignment_prec_operator)
                      (value
                        (duration_value)))))))
            (block_statement
              (assignment
                (var_identifier)
                (assignment_prec_operator)
                (type_identifier))))))))
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (property_alias
          (var_identifier)
          (var_identifier
            (post_identifier))))
      (block_statement
        (property_alias
          (var_identifier)
          (var_identifier
            (post_identifier))))
      (block_statement
        (component
          (var_identifier)
          (type_identifier)
          (block))))))

================================================================================
multiple_two_way
================================================================================

O := Text {
    property <int> val;
    text: val;
    property <int> a: val + 1;
}

TestCase := Window {
    property <int> val: condition ? 2 : 4;
    property <bool> condition : false;
    HorizontalLayout {
        o1 := O { val <=> root.val; }
        o2 := O { val <=> root.val; }
        o3 := O { val <=> root.val; }
        o4 := O { val <=> root.val; }
        o5 := O { val <=> root.val; }
    }
    property <int> checksum: 10000 * o1.a + 1000 * o2.a + 100 * o3.a + 10 * o4.a + 1 * o5.a;
    property <bool> test: checksum == 55555;
}


--------------------------------------------------------------------------------

(source_file
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (property
          (type_identifier)
          (var_identifier)))
      (block_statement
        (assignment
          (var_identifier)
          (assignment_prec_operator)
          (type_identifier)))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (add_binary_expression
            (type_identifier)
            (add_prec_operator)
            (value
              (int_value)))))))
  (component_definition
    (type_identifier)
    (type_identifier)
    (block
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (ternary_expression
            (type_identifier)
            (value
              (int_value))
            (value
              (int_value)))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (value
            (bool_value))))
      (block_statement
        (component
          (type_identifier)
          (block
            (block_statement
              (component
                (var_identifier)
                (type_identifier)
                (block
                  (block_statement
                    (property_alias
                      (var_identifier)
                      (var_identifier
                        (reference_identifier)
                        (post_identifier)))))))
            (block_statement
              (component
                (var_identifier)
                (type_identifier)
                (block
                  (block_statement
                    (property_alias
                      (var_identifier)
                      (var_identifier
                        (reference_identifier)
                        (post_identifier)))))))
            (block_statement
              (component
                (var_identifier)
                (type_identifier)
                (block
                  (block_statement
                    (property_alias
                      (var_identifier)
                      (var_identifier
                        (reference_identifier)
                        (post_identifier)))))))
            (block_statement
              (component
                (var_identifier)
                (type_identifier)
                (block
                  (block_statement
                    (property_alias
                      (var_identifier)
                      (var_identifier
                        (reference_identifier)
                        (post_identifier)))))))
            (block_statement
              (component
                (var_identifier)
                (type_identifier)
                (block
                  (block_statement
                    (property_alias
                      (var_identifier)
                      (var_identifier
                        (reference_identifier)
                        (post_identifier))))))))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (add_binary_expression
            (add_binary_expression
              (add_binary_expression
                (add_binary_expression
                  (mult_binary_expression
                    (value
                      (int_value))
                    (mult_prec_operator)
                    (var_identifier
                      (post_identifier)))
                  (add_prec_operator)
                  (mult_binary_expression
                    (value
                      (int_value))
                    (mult_prec_operator)
                    (var_identifier
                      (post_identifier))))
                (add_prec_operator)
                (mult_binary_expression
                  (value
                    (int_value))
                  (mult_prec_operator)
                  (var_identifier
                    (post_identifier))))
              (add_prec_operator)
              (mult_binary_expression
                (value
                  (int_value))
                (mult_prec_operator)
                (var_identifier
                  (post_identifier))))
            (add_prec_operator)
            (mult_binary_expression
              (value
                (int_value))
              (mult_prec_operator)
              (var_identifier
                (post_identifier))))))
      (block_statement
        (property
          (type_identifier)
          (var_identifier)
          (comparison_binary_expression
            (type_identifier)
            (comparison_operator)
            (value
              (int_value))))))))

================================================================================
two_way_binding
================================================================================

OtherComp := Rectangle {
    property <string> t <=> text.text;
    property <string> get_text <=> text.text;
    text := Text {
        text: "to be overridden";
    }
    property <int> some_value: 42;
    property <int> some_value_alias <=> some_value;
}

TestCase := Rectangle {

    property <string> text1: "Hello";
    property <string> text2: "Blah";
    property <string> ti1_text: ti1.text;
    property <string> ti2_text: ti2.text;
    property <string> text_item_text: text_item.text;
    property <string> othercomp_t: "real value";
    property <string> othercomp_get_text: other_comp.get_text;
    property <int> othercomp_some_value;
    property <int> othercomp_some_value_alias <=> other_comp.some_value_alias;
    property <int> othercomp_some_value_alias2;

    ti1 := TextInput {
        text <=> text1;
    }

    ti2 := TextInput {
        text <=> text_item.text;
    }

    text_item := Text {
        text: text2;
    }

    Text {
        text <=> text1;
    }

    other_comp := OtherComp {
        t <=> root.othercomp_t;
        some_value <=> othercomp_some_value;
        some_value_alias <=> othercomp_some_value_alias2;
    }

    callback set_ti1(string);
    set_ti1(a) => { ti1.text = a; }
    callback set_ti2(string);
    set_ti2(a) => { ti2.text = a; }
}


--------------------------------------------------------------------------------
